<resources>
    <string name="app_name">My Application</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email/Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Masuk</string>
    <string name="action_register">Daftar</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="forget_pass">Lupa Password?</string>
    <string name="letstrack">Let\'s Track!</string>
    <string name="news">News!</string>
    <string name="news_title">Yuk! Cek Resep Ibu Sehat Untuk Resep Bunda Kreatif</string>
    <string name="parenting">Parenting</string>
    <string name="parenting_desc">Berita terkait edukasi untuk buah hati</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="resepibusehat">Resep Ibu Sehat</string>
    <string name="search_article">Ketik kata kunci artikel</string>
    <string name="separator">|</string>
    <string name="sgmstore">SGM Store</string>
    <string name="tanyaahli">Tanya Ahli</string>

</resources>
