<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background ="#EEEEEE"
    tools:context=".Login">

    <ImageView
        android:id="@+id/sgmimage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/sgmlogo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        app:layout_constraintVertical_bias="0.200"
        />

    <TextView
        android:id="@+id/prompt_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/prompt_email"
        android:textSize="20sp"
        android:paddingVertical="10dp"

        app:layout_constraintRight_toLeftOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/sgmimage" />

    <EditText
        android:id="@+id/email_text_box"
        android:layout_width="300dp"
        android:layout_height="36dp"
        app:layout_constraintTop_toBottomOf="@+id/prompt_email"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        style="@style/Widget.AppCompat.EditText"
        android:background="@drawable/edit_text_background"
        />
    <TextView
        android:id="@+id/prompt_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/prompt_password"
        android:textSize="20sp"
        android:paddingVertical="10dp"
        app:layout_constraintLeft_toLeftOf="@+id/prompt_email"
        app:layout_constraintTop_toBottomOf="@+id/email_text_box" />

    <EditText
        android:id="@+id/password_text_box"
        android:layout_width="300dp"
        android:layout_height="36dp"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@+id/prompt_password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/edit_text_background"

        />

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/login_button"
        android:text="@string/action_sign_in"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:onClick="toHomepage"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_text_box"

        />

    <TextView
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/action_register"
        android:textColor="#E00926"
        app:layout_constraintTop_toBottomOf="@+id/login_button"
        app:layout_constraintLeft_toLeftOf="@+id/sgmimage"/>
    <TextView
        android:id="@+id/separator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="3dp"
        android:text="@string/separator"
        android:textSize="18sp"
        app:layout_constraintLeft_toRightOf="@+id/register"
        app:layout_constraintTop_toBottomOf="@+id/login_button"
        />
    <TextView
        android:id="@+id/forget_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="3dp"
        android:text="@string/forget_pass"
        app:layout_constraintLeft_toRightOf="@+id/separator"
        app:layout_constraintTop_toBottomOf="@+id/login_button"
        />
    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"/>

</android.support.constraint.ConstraintLayout>