<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#EEEEEE"
    tools:context=".Homepage">

<android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    >

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:adjustViewBounds="true"
        android:background="@android:color/transparent"
        android:scaleType="centerCrop"
        android:src="@drawable/profile"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/sgmimage"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:src="@drawable/sgmlogo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        app:layout_constraintVertical_bias="0" />

    <RelativeLayout
        android:id="@+id/news"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/sgmimage"
        >
        <TextView
            android:id="@+id/desc_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/news"
            android:textColor="#E00926"
            android:textSize="32sp"
            android:layout_marginStart="55dp"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            />
        <ImageView
            android:id="@+id/news_img"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginTop="4dp"
            android:src="@drawable/news1"
            android:layout_below="@id/desc_text"
            />

        <ImageView
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_below="@id/desc_text"
            android:layout_alignRight="@id/news_img"
            android:layout_alignEnd="@+id/news_img"
            android:layout_marginTop="14dp"
            android:layout_marginRight="37dp"
            android:layout_marginEnd="37dp"
            android:src="@drawable/next" />

        <TextView
            android:layout_width="292dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/desc_text"
            android:layout_marginBottom="-22dp"
            android:background="#99FFFFFF"
            android:text="@string/news_title"
            android:textSize="12sp"
            android:textColor="#000000"
            android:textAlignment="center"
            android:layout_centerInParent="true"/>
    </RelativeLayout>





    <RelativeLayout
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/placeholder1"
        app:layout_constraintRight_toLeftOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/news"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        >
        <ImageButton
            android:id="@+id/placeholder_parenting"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/placeholder"
            android:adjustViewBounds="true"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:onClick="toArticle"
             />

        <ImageButton
            android:id="@+id/parenting_img"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/parenting"
            app:layout_constraintLeft_toLeftOf="@id/placeholder_parenting"
            app:layout_constraintBottom_toBottomOf="@id/placeholder_parenting"
            android:adjustViewBounds="true"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:layout_marginBottom="20dp"
            android:onClick="toArticle"
            />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_alignBottom="@id/placeholder_parenting"
            android:layout_centerInParent="true"
            android:id="@+id/text_placeholder_parenting"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/parenting"
                android:textColor="#E00926"
                android:textSize="18sp"
                android:layout_centerInParent="true"


                />
        </RelativeLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/placeholder2"
        app:layout_constraintRight_toLeftOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/placeholder1"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        >
        <ImageButton
            android:id="@+id/placeholder_store"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/placeholder"
            android:adjustViewBounds="true"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            />

        <ImageButton
            android:id="@+id/store_img"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/sgmstore"
            app:layout_constraintLeft_toLeftOf="@id/placeholder_store"
            app:layout_constraintBottom_toBottomOf="@id/placeholder_store"
            android:adjustViewBounds="true"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:layout_marginBottom="40dp"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_alignBottom="@id/placeholder_store"
            android:layout_centerInParent="true"
            android:id="@+id/text_placeholder_store"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sgmstore"
                android:textColor="#E00926"
                android:textSize="18sp"
                android:layout_centerInParent="true"
                />
        </RelativeLayout>

    </RelativeLayout>



    <RelativeLayout
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/placeholder3"
        app:layout_constraintLeft_toRightOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/news"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        >
        <ImageButton
            android:id="@+id/placeholder_letstrack"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/placeholder"
            android:adjustViewBounds="true"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            />

        <ImageButton
            android:id="@+id/letstrack_img"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/letstrack"
            app:layout_constraintLeft_toLeftOf="@id/placeholder_letstrack"
            app:layout_constraintBottom_toBottomOf="@id/placeholder_letstrack"
            android:adjustViewBounds="true"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:layout_marginBottom="25dp"
            android:layout_marginRight="5dp"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_alignBottom="@id/placeholder_letstrack"
            android:layout_centerInParent="true"
            android:id="@+id/text_placeholder_letstrack"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/letstrack"
                android:textColor="#E00926"
                android:textSize="18sp"
                android:layout_centerInParent="true"
                />
        </RelativeLayout>

    </RelativeLayout>




    <RelativeLayout
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/placeholder4"
        app:layout_constraintLeft_toRightOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/placeholder3"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        >
        <ImageButton
            android:id="@+id/placeholder_resepibusehat"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/placeholder"
            android:adjustViewBounds="true"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            />

        <ImageButton
            android:id="@+id/resepibusehat_img"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/resepibusehat"
            app:layout_constraintLeft_toLeftOf="@id/placeholder_resepibusehat"
            app:layout_constraintBottom_toBottomOf="@id/placeholder_resepibusehat"
            android:adjustViewBounds="true"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:layout_marginBottom="30dp"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_alignBottom="@id/placeholder_resepibusehat"
            android:layout_centerInParent="true"
            android:id="@+id/text_placeholder_resepibusehat"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resepibusehat"
                android:textColor="#E00926"
                android:textSize="18sp"
                android:layout_centerInParent="true"
                />
        </RelativeLayout>

    </RelativeLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/placeholder4"
        android:src="@drawable/tanyaahli_raw"
        />





    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.513" />

</android.support.constraint.ConstraintLayout>
</ScrollView>