<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EEEEEE"
    tools:context=".Parenting">
<android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/profileButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:adjustViewBounds="true"
        android:background="@android:color/transparent"
        android:scaleType="centerCrop"
        android:src="@drawable/profile"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/homeButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:adjustViewBounds="true"
        android:background="@android:color/transparent"
        android:scaleType="centerCrop"
        android:src="@drawable/home"
        android:onClick="toHomepage"
        app:layout_constraintRight_toLeftOf="@id/profileButton"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/profileButton"
        >
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/parenting"
            android:textAllCaps="true"
            android:textColor="#E00926"
            android:textStyle="bold"
            android:textSize="25sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            />
        <TextView
            android:id="@+id/parenting_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/parenting_desc"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            />
        <ImageView
            android:id="@+id/search_icon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="10dp"
            android:src="@drawable/search_icon"
            app:layout_constraintTop_toBottomOf="@id/parenting_desc"
            app:layout_constraintLeft_toLeftOf="parent"
            />
        <EditText
            android:id="@+id/search_bar"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_background"
            app:layout_constraintTop_toTopOf="@id/search_icon"
            app:layout_constraintBottom_toBottomOf="@id/search_icon"
            app:layout_constraintLeft_toRightOf="@id/search_icon"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:hint="@string/search_article"
            android:imeOptions="actionDone"
            />

    </android.support.constraint.ConstraintLayout>
    <RelativeLayout
        android:id="@+id/search_results"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/top_bar">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:id="@+id/article1">

        <ImageButton
            android:id="@+id/image_preview"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@drawable/border"
            android:src="@drawable/article1"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:onClick="toArticle1"/>

        <TextView
            android:id="@+id/article1_title"
            android:layout_width="297dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="60dp"
            android:background="@drawable/border"
            android:padding="10dp"
            android:text="3 Ide Sensory Play untuk Balita yang Mudah Dibuat. Bermain Bareng Buah Hati, Yuk!"
            android:textColor="@android:color/black" />

    </RelativeLayout>
        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:id="@+id/article2"
            android:layout_below="@id/article1"
            >

            <ImageButton
                android:id="@+id/image_preview2"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@drawable/border"
                android:src="@drawable/article2"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:onClick="toArticle2"/>

            <TextView
                android:id="@+id/article2_title"
                android:layout_width="297dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="60dp"
                android:background="@drawable/border"
                android:padding="10dp"
                android:text="3 Stimulasi Motorik Agar Bayimu Bisa Berjalan Sebelum Usia 1 Tahun."
                android:textColor="@android:color/black" />



        </RelativeLayout>


        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:id="@+id/article3"
            android:layout_below="@id/article2"
            >
            <ImageButton
                android:id="@+id/image_preview3"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@drawable/border"
                android:src="@drawable/article3"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:onClick="toArticle3"/>

            <TextView
                android:id="@+id/article3_title"
                android:layout_width="297dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="60dp"
                android:background="@drawable/border"
                android:padding="10dp"
                android:text="5 Cara Sederhana Biar Anak Nggak Terlalu Kecanduan Youtube. Bu-ibu Yuk Pahami Dulu!"
                android:textColor="@android:color/black" />

        </RelativeLayout>
        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:id="@+id/article4"
            android:layout_below="@id/article3"
            >
            <ImageButton
                android:id="@+id/image_preview4"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@drawable/border"
                android:src="@drawable/article4"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:onClick="toArticle4"/>

            <TextView
                android:id="@+id/article4_title"
                android:layout_width="297dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="60dp"
                android:background="@drawable/border"
                android:padding="10dp"
                android:text="6 Fakta Seputar Flu Singapura yang Kerap Menyerang Bayi dan Balita. Para Ibu Muda Wajib Waspada"
                android:textColor="@android:color/black" />

        </RelativeLayout>

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:id="@+id/article5"
            android:layout_below="@id/article4"
            >
            <ImageButton
                android:id="@+id/image_preview5"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@drawable/border"
                android:src="@drawable/article5"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:onClick="toArticle5"/>

            <TextView
                android:id="@+id/article5_title"
                android:layout_width="297dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="60dp"
                android:background="@drawable/border"
                android:padding="10dp"
                android:text="Berat Badan Anak Nggak Bertambah Sesuai Usia? Hati-Hati Bahaya Stunting"
                android:textColor="@android:color/black" />

        </RelativeLayout>
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
</ScrollView>